<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Create">Create</string>
    <string name="Next">Next</string>
    <string name="Welcome_Heading">The Shoe Store App</string>
    <string name="Welcome_Paragraph">Welcome to your new shoe store. You have taken an important step in being able to manage your
        store more effectively. This app will help you store and view your entire inventory.
        On the next screen you will learn more about how to manage your inventory. Click the Next button below to continue.</string>
    <string name="Welcome">Welcome</string>
    <string name="Instructions_Heading">Let\'s Get Started</string>
    <string name="Instructions_Paragraph">(1) The Shoe List screen is a list of all of your inventory.
        \n(2) Scroll through the list to see more items.
        \n(3) Click on the + at the bottom of the screen to add inventory.
        \n(4) Enter new inventory on the Add New Shoe screen.
        \n(5) Save new inventory by pressing on the Save button.
        \n(7) Cancel adding new inventory by pressing on the Cancel button.
        \n(8) Log out of the app from the toolbar in Shoe List screen. </string>
    <string name="Start">Start</string>
    <string name="Instructions">Instructions</string>
    <string name="Shoe_List">Shoe List</string>
    <string name="Name">Name: </string>
    <string name="Size">Size: </string>
    <string name="Company">Company: </string>
    <string name="Description">Description: </string>
    <string name="Add_New_Shoe">Add New Shoe</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Logout">Logout</string>
</resources>
