<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/Login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.WelcomeFragment"
        android:label="@string/Welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:popUpTo="@id/instructionsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.InstructionsFragment"
        android:label="@string/Instructions" >
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ShoeListFragment"
        android:label="@string/Shoe_List" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:popUpTo="@id/shoeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.ShoeDetailFragment"
        android:label="@string/Add_New_Shoe" />
</navigation>